--- a/WebRoot/WEB-INF/web.xml
+++ b/WebRoot/WEB-INF/web.xml
@@ -8,4 +8,75 @@
   <welcome-file-list>
     <welcome-file>index.jsp</welcome-file>
   </welcome-file-list>
+  
+  <servlet>
+      <servlet-name>UploadFileServlet</servlet-name>
+      <servlet-class>com.jason.file.UploadFileServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+      <servlet-name>UploadFileServlet</servlet-name>
+      <url-pattern>/UploadFileServlet</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+      <servlet-name>UploadAttachmentServlet</servlet-name>
+      <servlet-class>com.jason.file.UploadAttachmentServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+      <servlet-name>UploadAttachmentServlet</servlet-name>
+      <url-pattern>/UploadAttachmentServlet</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+      <servlet-name>UploadPhotoServlet</servlet-name>
+      <servlet-class>com.jason.file.UploadPhotoServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+      <servlet-name>UploadPhotoServlet</servlet-name>
+      <url-pattern>/UploadPhotoServlet</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+      <servlet-name>SendEmailServlet</servlet-name>
+      <servlet-class>com.jason.email.SendEmailServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+      <servlet-name>SendEmailServlet</servlet-name>
+      <url-pattern>/SendEmailServlet</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+      <servlet-name>GenerateTemplateServlet</servlet-name>
+      <servlet-class>com.jason.file.GenerateTemplateServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+      <servlet-name>GenerateTemplateServlet</servlet-name>
+      <url-pattern>/GenerateTemplateServlet</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+      <servlet-name>JsonServlet</servlet-name>
+      <servlet-class>com.jason.json.servlet.JsonServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+      <servlet-name>JsonServlet</servlet-name>
+      <url-pattern>/JsonServlet</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+      <servlet-name>JsonOperationServlet</servlet-name>
+      <servlet-class>com.jason.json.servlet.JsonOperationServlet</servlet-class>
+  </servlet>
+
+  <servlet-mapping>
+      <servlet-name>JsonOperationServlet</servlet-name>
+      <url-pattern>/JsonOperationServlet</url-pattern>
+  </servlet-mapping>
+  
 </web-app>
