update send email function

--- a/src/email.properties
+++ b/src/email.properties
@@ -1,10 +1,11 @@
-EMAIL_GATEWAY = smtp.163.com
-EMAIL_FROM = 
-EMAIL_PASSWORD = 
+EMAIL_GATEWAY=
+EMAIL_FROM=
+EMAIL_PASSWORD=
+EMAIL_PORT=25
+EMAIL_TRANSPORT_PROTOCOL=smtp
+EMAIL_SMTP_AUTH=true
 EMAIL_TO = 
 EMAIL_CC = 
-EMAIL_PORT = 25
-EMAIL_TRANSPORT_PROTOCOL = smtp
-EMAIL_SMTP_AUTH = true
+EMAIL_BCC = 
 HTMLTEMPLATEDIR =classpath\:com/jason/config/
 ATTACHMENTPATH =D\:/apache-tomcat-6.0.30(could)/webapps/gitclinetproject/WEB-INF/classes/com/jason/config
